<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="dv" type="com.sc.lib_float.widget.DrawView"/>

<!--        <import  type="com.sc.lib_float.enum.PaintState"/>-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
    >


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/draw_parent">

            <com.sc.lib_float.widget.DrawView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/draw1"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/ctrl_ly"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:paddingStart="@dimen/float_line_padding"
                      android:paddingBottom="@dimen/float_line_padding"
                      android:gravity="bottom"
        >

            <ImageView android:layout_width="@dimen/float_icon_width"
                       android:layout_height="@dimen/float_icon_height"
                       android:id="@+id/icon_iv"
                       android:src="@mipmap/ic_launcher"
                       android:padding="2dp"
                       android:clickable="true"
            />

            <LinearLayout style="@style/float_line_style"
                          android:id="@+id/line1_ly"
                          android:orientation="vertical"
                          android:visibility="gone"
                          tools:visibility="visible">

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/pen_tv"
                        android:text="@string/icon_pen"
                        isSelect="@{dv.paintState == 0}"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/eraser_tv"
                        android:text="@string/icon_eraser"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/back_tv"
                        android:text="@string/icon_back"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/next_tv"
                        android:text="@string/icon_next"
                />

                <!--工具-->
                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/tool_tv"
                        android:text="@string/icon_tool"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/line_weight_tv"
                        android:text="@string/icon_line_weight"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/color_tv"
                        android:text="@string/icon_color"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/clear_tv"
                        android:text="@string/icon_clear"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/ctrl_tv"
                        android:text="@string/icon_ctrl"
                        isSelect="@{dv.paintState == 2}"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/save_line_tv"
                        android:text="@string/icon_save"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/setting_tv"
                        android:text="@string/icon_setting"
                />

                <com.nbhope.lib_frame.widget.IconFontView
                        style="@style/float_line_icon_style"
                        android:id="@+id/close_tv"
                        android:text="@string/icon_close"
                />

            </LinearLayout>

            <LinearLayout style="@style/float_line_style"
                          android:id="@+id/line2_ly"
                          android:orientation="vertical"
                          android:visibility="gone"
                          tools:visibility="visible"
                          android:layout_marginStart="@dimen/float_line_padding"
            >

                <!--        <com.nbhope.lib_frame.widget.IconFontView-->
                <!--                style="@style/float_line_icon2_style"-->
                <!--                android:id="@+id/save_tv"-->
                <!--                android:text="@string/icon_save"-->
                <!--        />-->

                <!--        <com.nbhope.lib_frame.widget.IconFontView-->
                <!--                style="@style/float_line_icon2_style"-->
                <!--                android:id="@+id/share_tv"-->
                <!--                android:text="@string/icon_save"-->
                <!--        />-->

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

